<resources>
    <string name="app_name">NewsApi</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_password_confirmation">Password confirmation</string>
    <string name="action_sign_in">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="wellcome">wellcome</string>
    <string name="have_no_account">Still have not account? Sing Up</string>
    <string name="sing_in">sing in</string>
    <string name="sing_un">Sing Up</string>
    <string name="have_account">Already have an account. Sing in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="error_diff_pass">The passwords is not the same</string>


    <string-array name="city_array">
        <item>Kyiv</item>
        <item>Kharkiv</item>
        <item>Dnipro</item>
        <item>Lviv</item>
        <item>Varshava</item>
        <item>Kraków</item>
        <item>Łódź</item>
        <item>Poznan</item>
        <item>Berlin</item>
        <item>Munchen</item>
        <item>Cologne</item>
        <item>Hamburg</item>
    </string-array>


    <string-array name="country_array">
        <item>Ukraine</item>
        <item>Poland</item>
        <item>Germany</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="news_api_key">7cf06a7c9b2a4a6891e1f2edca2bfa87</string>
</resources>
